Simplify console player locale system, close #106